fix: helm v3 has no init

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -25,8 +25,7 @@ RUN chmod +x /usr/local/bin/aws-iam-authenticator
 ADD https://get.helm.sh/${HELM_FILE_NAME} /tmp
 RUN tar -zxvf /tmp/${HELM_FILE_NAME} -C /tmp \
   && mv /tmp/linux-amd64/helm /bin/helm \
-  && rm -rf /tmp/* \
-  && /bin/helm init --client-only
+  && rm -rf /tmp/*
 
 RUN mkdir -p "$(helm home)/plugins" && \
     helm plugin install https://github.com/databus23/helm-diff --version ${HELM_DIFF_VERSION} && \
