--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -27,10 +27,11 @@ RUN tar -zxvf /tmp/${HELM_FILE_NAME} -C /tmp \
   && mv /tmp/linux-amd64/helm /bin/helm \
   && rm -rf /tmp/*
 
-RUN mkdir -p "$(helm home)/plugins" && \
-    helm plugin install https://github.com/databus23/helm-diff --version ${HELM_DIFF_VERSION} && \
-    helm plugin install https://github.com/futuresimple/helm-secrets --version ${HELM_SECRETS_VERSION} && \
-    helm plugin install https://github.com/hypnoglow/helm-s3.git --version ${HELM_S3_VERSION}
+# Don't need any plugins yet...
+#RUN mkdir -p "$(helm home)/plugins" && \
+#    helm plugin install https://github.com/databus23/helm-diff --version ${HELM_DIFF_VERSION} && \
+#    helm plugin install https://github.com/futuresimple/helm-secrets --version ${HELM_SECRETS_VERSION} && \
+#    helm plugin install https://github.com/hypnoglow/helm-s3.git --version ${HELM_S3_VERSION}
 
 ADD https://github.com/roboll/helmfile/releases/download/v${HELMFILE_VERSION}/helmfile_linux_amd64 /bin/helmfile
 RUN chmod 0755 /bin/helmfile
