fix: add helm diff

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -33,6 +33,8 @@ RUN tar -zxvf /tmp/${HELM_FILE_NAME} -C /tmp \
 #    helm plugin install https://github.com/futuresimple/helm-secrets --version ${HELM_SECRETS_VERSION} && \
 #    helm plugin install https://github.com/hypnoglow/helm-s3.git --version ${HELM_S3_VERSION}
 
+RUN helm plugin install https://github.com/databus23/helm-diff --version master
+
 ADD https://github.com/roboll/helmfile/releases/download/v${HELMFILE_VERSION}/helmfile_linux_amd64 /bin/helmfile
 RUN chmod 0755 /bin/helmfile
 
