--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -1,12 +1,11 @@
 FROM alpine:3.11
 
-ARG CHAMBER_VERSION=2.8.0
+ARG CHAMBER_VERSION=2.8.2
 ARG KUBECTL_VERSION=1.14.6
-ARG HELM_VERSION=3.2.1
+ARG HELM_VERSION=3.2.4
 ARG HELM_DIFF_VERSION=3.1.1
-ARG HELM_SECRETS_VERSION=1.3.1
+ARG HELM_SECRETS_VERSION=2.0.2
 ARG HELMFILE_VERSION=0.114.0
-ARG HELM_S3_VERSION=0.9.0
 
 ENV HELM_FILE_NAME helm-v${HELM_VERSION}-linux-amd64.tar.gz
 
@@ -27,15 +26,9 @@ RUN tar -zxvf /tmp/${HELM_FILE_NAME} -C /tmp \
   && mv /tmp/linux-amd64/helm /bin/helm \
   && rm -rf /tmp/*
 
-# Don't need any plugins yet...
-#RUN mkdir -p "$(helm home)/plugins" && \
-#    helm plugin install https://github.com/databus23/helm-diff --version ${HELM_DIFF_VERSION} && \
-#    helm plugin install https://github.com/futuresimple/helm-secrets --version ${HELM_SECRETS_VERSION} && \
-#    helm plugin install https://github.com/hypnoglow/helm-s3.git --version ${HELM_S3_VERSION}
-
-RUN helm plugin install https://github.com/databus23/helm-diff --version master
-RUN helm plugin install https://github.com/aslafy-z/helm-git.git
-RUN helm plugin install https://github.com/futuresimple/helm-secrets
+RUN helm plugin install https://github.com/databus23/helm-diff --version $HELM_DIFF_VERSION
+RUN helm plugin install https://github.com/aslafy-z/helm-git.git --version master
+RUN helm plugin install https://github.com/zendesk/helm-secrets --version $HELM_SECRETS_VERSION
 
 ADD https://github.com/roboll/helmfile/releases/download/v${HELMFILE_VERSION}/helmfile_linux_amd64 /bin/helmfile
 RUN chmod 0755 /bin/helmfile
