feat: updating terragrunt and atlantis

--- a/atlantis/Dockerfile
+++ b/atlantis/Dockerfile
@@ -1,10 +1,20 @@
 # The runatlantis/atlantis-base is created by docker-base/Dockerfile.
-FROM runatlantis/atlantis:latest
-RUN apk add --no-cache python py-pip curl
-RUN pip install awscli
-RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
-RUN chmod +x ./kubectl
-RUN mv ./kubectl /usr/local/bin/kubectl
-ADD https://github.com/gruntwork-io/terragrunt/releases/download/v0.22.1/terragrunt_linux_amd64 /usr/local/bin/terragrunt
-RUN chmod +x /usr/local/bin/terragrunt
+ARG ATLANTIS_DOCKER_IMAGE_VERSION=latest
+ARG TERRAGRUNT_VERSION=0.23.38
 
+FROM runatlantis/atlantis:${ATLANTIS_DOCKER_IMAGE_VERSION}
+
+RUN apk add --update --no-cache python3 bash curl \
+    && curl -O https://bootstrap.pypa.io/get-pip.py \
+    && python3 get-pip.py \
+    && pip install --upgrade awscli
+
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl \
+    && chmod +x ./kubectl \
+    && mv ./kubectl /usr/local/bin/kubectl \
+
+RUN curl -LO https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64 \
+    && chmod +x ./terragrunt_linux_amd64 \
+    && mv ./terragrunt_linux_amd64 /usr/local/bin/terragrunt
+
+RUN chmod +x /usr/local/bin/terragrunt
