--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -7,6 +7,7 @@ ARG HELM_DIFF_VERSION=3.1.3
 ARG HELM_SECRETS_VERSION=2.0.2
 ARG ISTIO_VERSION=1.7.3
 ARG HELMFILE_VERSION=0.132.0
+ARG YQ_BIN_VERSION=3.4.1
 
 ENV HELM_FILE_NAME helm-v${HELM_VERSION}-linux-amd64.tar.gz
 
@@ -18,6 +19,9 @@ RUN apk --update --no-cache add bash ca-certificates git gnupg curl gettext pyth
 
 RUN curl -L https://istio.io/downloadIstio | ISTIO_VERSION=$ISTIO_VERSION TARGET_ARCH=x86_64 sh - \
    && mv istio-$ISTIO_VERSION/bin/istioctl /bin/istioctl 
+
+RUN curl --silent --show-error --fail --location --output /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/"${YQ_BIN_VERSION}"/yq_linux_amd64 \
+    && chmod 755 /usr/local/bin/yq
 
 ADD https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl /usr/local/bin/kubectl
 RUN chmod +x /usr/local/bin/kubectl
